Progress on User-Service All endpoints work